# youtube-music-pooper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
templates/: index.html
