[tool.poetry]
name = "youtube-music-pooper"
version = "0.1.0"
description = "Poops stems from youtube"
authors = ["jkarenko <juho.karenko@gmail.com>"]
readme = "README.md"
packages = [{ include = "youtube_music_pooper" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
yt-dlp = "*"
jinja2 = "*"
demucs = "*"
torch = "*"
torchaudio = "*"
sox = "*"
python-multipart = "*"
pydub = "*"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
